2012-08-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, aprx.h, ttyreader.c, erlang.c, kiss.c:
	    Fixed a) poll of KISS subinterfaces, b) KISS polling time
	    management issues.  The polling does not yet have serial-device
	    specific timing management, rather a global cadence.

	* aprx.c:
	    Version 2.05

	* ttyreader.c, aprxpolls.c, aprx.c, aprx.h:
	    Do millisecond timings, send KISS POLL (0x0E) code requests every
	    configured number of milliseconds per serial-device:
	       serial-device ... KISS pollmillis 100

	* agwpesocket.c, aprsis.c, aprx.c, aprx.h, aprxpolls.c, aprx-stat.c,
	  beacon.c, configure.in, digipeater.c, dprsgw.c, dupecheck.c,
	  erlang.c, filter.c, historydb.c, igate.c, interface.c, kiss.c,
	  netax25.c, netresolver.c, pbuf.c, telemetry.c, ttyreader.c:
	    Changed "now" from type "time_t" to "struct timeval" enabling
	    the ttyreader to do millisecond level timing operations.

2012-08-06  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* debian/aprx.init, rpm/aprx.init:
	    Correct the package start dependency definitions.

2012-08-04  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c, kiss.c:
	    Debug printout claimed reversed logical meaning in history-db
	    lookup. Typo fixes at kiss processing comments.

	* interface.c:
	    Config parser bug in defining multiple <kiss-subif ..>.
	    Thanks to N2PYI for report.

2012-07-31  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* configure.in, digipeater.c, aprx.h, valgrind.c:
	    Supply implementation of memrchr() if the platform does not have
	    it. (GNU Libc extension, not a standard POSIX thing.)

	* Makefile.in:
	    Fixing details around how to run "make make-deb".
	    Fixing how SVNVERSION is determined.

	* interface.c, igate.c, aprx.h:
	    rflog() parameter set modification, show directly at calls if
	    the logged item is 'R' or 'T'.

	* dupecheck.c, aprsis.c, igate.c, aprx.h, digipeater.c: